--- a/webapp/home/labs/genome/templates/conclusion.html
+++ b/webapp/home/labs/genome/templates/conclusion.html
@@ -80,9 +80,7 @@
       </div>
       <div class="modal-body">
         <p>
-          <p><a href="https://www.biocommons.org.au/genomics-domain" target="_blank">Discover more genomics activities and services supported by Australian BioCommons</a></p>
-          <p><a href="https://groups.google.com/a/biocommons.org.au/g/genome-assembly" target="_blank">Join the Australian BioCommons Genome Assembly Community Group</a></p>
-          <p><a href="https://groups.google.com/a/biocommons.org.au/g/genome-annotation" target="_blank">Join the Australian BioCommons Genome Annotation Community Group</a></p>
+          <p><a href="https://www.biocommons.org.au/genomics-domain" target="_blank">Discover more genomics activities and services supported by Australian BioCommons, and join in the community Genomics meetings</a></p>
         </p>
       </div>
       <div class="modal-footer">
