--- a/webapp/home/labs/genome/templates/intro.html
+++ b/webapp/home/labs/genome/templates/intro.html
@@ -28,8 +28,8 @@
           </div>
 
           <p><a class="ga-btn" href="{{ galaxy_base_url }}" target="_blank">Take me back to Galaxy {{ site_name }}</a></p>
-          <p><a class="ga-btn" href="/about">What is Galaxy Australia?</a></p>
-          <p><a class="ga-btn" href="/request/support">Galaxy Australia support</a></p>
+          <p><a class="ga-btn" href="/about">What is Galaxy {{ site_name }}?</a></p>
+          <p><a class="ga-btn" href="/request/support">Galaxy {{ site_name }} support</a></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
