--- a/webapp/home/labs/proteomics/templates/intro.html
+++ b/webapp/home/labs/proteomics/templates/intro.html
@@ -14,7 +14,7 @@
 
   <p>
     This page is currently under development in consultation with the
-    <a href="https://www.biocommons.org.au/proteomics" target="_blank">
+    <a href="https://www.biocommons.org.au/proteomics-community" target="_blank">
       Australian Proteomics Bioinformatics community</a>.
   </p>
 </section>
