Fix genome lab conclusion text

--- a/webapp/home/labs/genome/templates/conclusion.html
+++ b/webapp/home/labs/genome/templates/conclusion.html
@@ -9,7 +9,7 @@
   </button>
   <br>
   <br>
-  <h4 class="mb-3">What do you think of the {{ site_name }}?</h4>
+  <h4 class="mb-3">What do you think of the {{ lab_name }}?</h4>
   <button
     class="ga-btn"
     data-bs-toggle="modal"
