--- a/webapp/home/labs/proteomics/templates/intro.html
+++ b/webapp/home/labs/proteomics/templates/intro.html
@@ -39,29 +39,18 @@
     </div>
 
     <div class="col">
-      <a class="text-danger" href="">
-        <table>
-          <tr>
-            <td>
-              <span class="material-icons px-3" style="font-size: 3rem;">change_circle</span>
-            </td>
-            <td>
-              MS data file format converters
-            </td>
-          </tr>
-        </table>
-      </a>
-    </div>
-
-    <div class="col">
-      <a class="text-danger" href="">
+      <a
+        href="#"
+        data-bs-toggle="modal"
+        data-bs-target="#sharedHistoryModal"
+      >
         <table>
           <tr>
             <td>
               <span class="material-icons px-3" style="font-size: 3rem;">account_tree</span>
             </td>
             <td>
-              MS reference data on Galaxy
+              Public data on Galaxy AU
             </td>
           </tr>
         </table>
@@ -93,6 +82,39 @@
         <p><a class="ga-btn" href="{{ galaxy_base_url }}" target="_blank">Take me back to Galaxy {{ site_name }}</a></p>
         <p><a class="ga-btn" href="/about">What is Galaxy Australia?</a></p>
         <p><a class="ga-btn" href="/request/support">Galaxy Australia support</a></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="sharedHistoryModal" tabindex="-1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Galaxy {{ site_name }} Shared Histories</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>
+          These Galaxy Histories...
+        </p>
+
+        <table class="table table-striped">
+          <tr>
+            <td>
+              HISTORY BLAH
+            </td>
+            <td>
+              <a class="btn btn-primary" href="">
+                View history
+              </a>
+            </td>
+          </tr>
+        </table>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
