Proteomics update header with shared histories modal

--- a/webapp/home/labs/proteomics/templates/intro.html
+++ b/webapp/home/labs/proteomics/templates/intro.html
@@ -50,7 +50,7 @@
               <span class="material-icons px-3" style="font-size: 3rem;">account_tree</span>
             </td>
             <td>
-              Public data on Galaxy AU
+              Shared proteomics histories
             </td>
           </tr>
         </table>
@@ -100,16 +100,30 @@
       </div>
       <div class="modal-body">
         <p>
-          These Galaxy Histories...
+          This set of proteomics-specific shared histories contain test or demo data for software available on Proteomics Lab. You can copy these histories directly to your account on Galaxy, making it faster to get started!
         </p>
 
         <table class="table table-striped">
           <tr>
             <td>
-              HISTORY BLAH
+              Demo data for LFQanalyst and TMTanalyst.
             </td>
             <td>
-              <a class="btn btn-primary" href="">
+              <a class="btn btn-primary text-nowrap" href="https://usegalaxy.org.au/u/mike/h/lfq-and-tmt">
+                View history
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              Example data provided for the "MaxQuant and MSstats for the analysis of label-free data" Galaxy Training Network (GTN) tutorial, which is available
+              <a href="https://gxy.io/GTN:T00219">here</a>.
+            </td>
+            <td>
+              <a
+                class="btn btn-primary text-nowrap"
+                href="https://usegalaxy.org.au/u/johan/h/maxquant-and-msstats-for-the-analysis-of-label-free-data-1"
+              >
                 View history
               </a>
             </td>
