Fix "What is this page" position

--- a/webapp/home/labs/proteomics/templates/intro.html
+++ b/webapp/home/labs/proteomics/templates/intro.html
@@ -1,24 +1,23 @@
 <section class="my-5" id="tagline">
+  <a
+    href="#"
+    id="whatIsThisPage"
+    data-bs-toggle="modal"
+    data-bs-target="#infoModal"
+  >
+    What is this page?
+  </a>
   <p>
     Welcome to the Galaxy Australia Proteomics Lab. Get quick access to the
     tools, workflows and tutorials you need to get started with proteomics on
     Galaxy.
-    <br>
-    <a
-      href="#"
-      data-bs-toggle="modal"
-      data-bs-target="#infoModal"
-      style="position: absolute; top: 135px; right: calc(50vw - 500px);"
-    >
-      What is this page?
-    </a>
   </p>
 
   <p>
     This page is currently under development in consultation with the
     <a href="https://www.biocommons.org.au/proteomics-community" target="_blank">
       Australian Proteomics Bioinformatics community</a>.
-  </p>
+    </p>
 </section>
 
 <hr>
