--- a/webapp/home/labs/genome/templates/footer.html
+++ b/webapp/home/labs/genome/templates/footer.html
@@ -1,4 +1,4 @@
-<iframe id="footerIframe" style="width: 100%;" src="http://site.usegalaxy.org.au/embed/home/snippets/footer.html"></iframe>
+<iframe id="footerIframe" style="width: 100%;" src="https://site.usegalaxy.org.au/embed/home/snippets/footer.html"></iframe>
 <script>
   // Dynamically resize the iframe based on the content height
   window.addEventListener("message", function(event) {
